#734: Currently, when driver cannot be created, the test is KO
make it SKIPPED instead